- Compose: included services and infra associated to candidates domain - Added pagination to positions-manager-service - Optimize imports
