# project/recruiters/backend/services/positions-manager-service/src/main/java/com/jaruiz/casarrubios/recruiters/services/posmanager/adapters/persistence/repository/entities/PositionEntity.java
@@ -3,101 +3,30 @@ package com.jaruiz.casarrubios.recruiters.services.posmanager.adapters.persisten
 import java.time.LocalDateTime;
 import java.util.List;
 
+import io.quarkus.hibernate.orm.panache.PanacheEntityBase;
 import jakarta.persistence.*;
 
 @Entity
 @Table(name = "POSITIONS")
-public class PositionEntity {
+public class PositionEntity extends PanacheEntityBase {
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private Long id;
-    private String title;
-    private String description;
-    private int status;
+    public Long id;
+    public String title;
+    public String description;
+    public int status;
     @Column(name = "created_at")
-    private LocalDateTime createdAt;
+    public LocalDateTime createdAt;
     @Column(name = "published_at")
-    private LocalDateTime publishedAt;
+    public LocalDateTime publishedAt;
 
     @OneToMany(mappedBy = "position", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.LAZY)
-    private List<RequirementEntity> requirements;
+    public List<RequirementEntity> requirements;
 
     @OneToMany(mappedBy = "position", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.LAZY)
-    private List<BenefitEntity> benefits;
+    public List<BenefitEntity> benefits;
 
     @OneToMany(mappedBy = "position", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.LAZY)
-    private List<TaskEntity> tasks;
-
-    public Long getId() {
-        return id;
-    }
-
-    public void setId(Long id) {
-        this.id = id;
-    }
-
-    public String getTitle() {
-        return title;
-    }
-
-    public void setTitle(String title) {
-        this.title = title;
-    }
-
-    public String getDescription() {
-        return description;
-    }
-
-    public void setDescription(String description) {
-        this.description = description;
-    }
-
-    public int getStatus() {
-        return status;
-    }
-
-    public void setStatus(int status) {
-        this.status = status;
-    }
-
-    public LocalDateTime getCreatedAt() {
-        return createdAt;
-    }
-
-    public void setCreatedAt(LocalDateTime createdAt) {
-        this.createdAt = createdAt;
-    }
-
-    public LocalDateTime getPublishedAt() {
-        return publishedAt;
-    }
-
-    public void setPublishedAt(LocalDateTime publishedAt) {
-        this.publishedAt = publishedAt;
-    }
-
-    public List<RequirementEntity> getRequirements() {
-        return requirements;
-    }
-
-    public void setRequirements(List<RequirementEntity> requirements) {
-        this.requirements = requirements;
-    }
-
-    public List<BenefitEntity> getBenefits() {
-        return benefits;
-    }
-
-    public void setBenefits(List<BenefitEntity> conditions) {
-        this.benefits = conditions;
-    }
-
-    public List<TaskEntity> getTasks() {
-        return tasks;
-    }
-
-    public void setTasks(List<TaskEntity> tasks) {
-        this.tasks = tasks;
-    }
+    public List<TaskEntity> tasks;
 }
