# project/recruiters/backend/services/positions-manager-service/src/main/java/com/jaruiz/casarrubios/recruiters/services/posmanager/adapters/persistence/repository/entities/RequirementEntity.java
@@ -1,73 +1,22 @@
 package com.jaruiz.casarrubios.recruiters.services.posmanager.adapters.persistence.repository.entities;
 
+import io.quarkus.hibernate.orm.panache.PanacheEntityBase;
 import jakarta.persistence.*;
 
 @Entity
 @Table(name = "REQUIREMENTS")
-public class RequirementEntity {
+public class RequirementEntity extends PanacheEntityBase {
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private long id;
+    public long id;
 
     @ManyToOne
     @JoinColumn(name="position_id")
-    private PositionEntity position;
+    public PositionEntity position;
 
-    private String key;
-    private String description;
-    private String value;
-    private Boolean mandatory;
-
-    public long getId() {
-        return id;
-    }
-
-    public void setId(long id) {
-        this.id = id;
-    }
-
-    public String getKey() {
-        return key;
-    }
-
-    public void setKey(String key) {
-        this.key = key;
-    }
-
-    public String getDescription() {
-        return description;
-    }
-
-    public void setDescription(String description) {
-        this.description = description;
-    }
-
-    public Long getPositionId() {
-        return position.getId();
-    }
-
-    public PositionEntity getPosition() {
-        return position;
-    }
-
-    public void setPosition(PositionEntity position) {
-        this.position = position;
-    }
-
-    public String getValue() {
-        return value;
-    }
-
-    public void setValue(String value) {
-        this.value = value;
-    }
-
-    public Boolean getMandatory() {
-        return mandatory;
-    }
-
-    public void setMandatory(Boolean mandatory) {
-        this.mandatory = mandatory;
-    }
+    public String key;
+    public String description;
+    public String value;
+    public Boolean mandatory;
 }
